<resources>
    <string name="app_name">DevicesFileTransfer</string>
    <string name="device_icon_description">Device icon</string>
    <string name="devices_title">Devices</string>
    <string name="no_devices_found">No devices found</string>
    <string name="tab_text_1">Devices</string>
    <string name="tab_text_2">Transfers</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="incoming_outgoing_icon_description">Incoming/Outgoing indicator</string>
    <string name="send_files_title">Send Files</string>
    <string name="send_files">Send</string>
    <string name="browse_files">Browse files</string>
    <string name="no_files_attached">No files attached</string>
    <string name="devices_tip_header">Can´t you find the device?</string>
    <string name="devices_header_question_tip_text">
        Disable and enable the Wi-Fi in both devices and swipe again or try a direct connection
    </string>
    <string name="add_device_icon_description">Add device</string>
    <string name="add_device_form_title">ADD DEVICE</string>
    <string name="add_device_name_field">Name</string>
    <string name="add_device_address_field">IP Address/Hostname</string>
    <string name="submit">Submit</string>
    <string name="header_ip_address_text">Your IP:</string>
</resources>
