<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.main.devices.DevicesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/devicesHeader">

            <RelativeLayout
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.afa.devicesfiletransfer.view.components.ClickableImageView
                    android:id="@+id/questionIconImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/question_tip_icon"
                    android:contentDescription="@string/device_icon_description" />

                <TextView
                    android:id="@+id/tipHeaderTextView"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="40dp"
                    android:layout_toStartOf="@+id/addDirectConnectionImageView"
                    android:layout_toEndOf="@+id/questionIconImageView"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/devices_tip_header"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/yourIpTextView"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tipHeaderTextView"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/questionIconImageView"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/header_ip_address_text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/currentDeviceIpTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tipHeaderTextView"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="40dp"
                    android:layout_toStartOf="@+id/addDirectConnectionImageView"
                    android:layout_toEndOf="@+id/yourIpTextView"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="12sp"
                    tools:text="192.168.1.189" />

                <com.afa.devicesfiletransfer.view.components.ClickableImageView
                    android:id="@+id/addDirectConnectionImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/add_device_icon_description"
                    android:src="@drawable/plus_icon" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/devicesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_devices_list" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendFilesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/icon_send"
        android:visibility="invisible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>